Check record defined

--- a/reuz_sale_order_extends/views/sale_order_extends_view.xml
+++ b/reuz_sale_order_extends/views/sale_order_extends_view.xml
@@ -26,7 +26,9 @@
           <field name="technology_product" />
         </group>
         <separator string="Produit infos" />
-        <field name="reference_product" />
+        <group>
+          <field name="reference_product" />
+        </group>
       </xpath>
 
     </field>
