Fixed custom library

--- a/custom_library/views/custom_library_view.xml
+++ b/custom_library/views/custom_library_view.xml
@@ -11,7 +11,7 @@
       </field> -->
 
       <xpath expr="//field[@name='isbn']" position="after">
-        <field name="is_available">
+        <field name="is_available" />
       </xpath>
 
       <!-- <xpath expr="//field[@name='isbn']" position="attributes">
